# sdl2-hpp

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
src/sdl2/: events.hpp  filesystem.hpp  messagebox.hpp  platform.hpp  renderer.hpp  root.hpp  sdl2.hpp  surface.hpp  texture.hpp  window.hpp
src/sdl2/image/: root.hpp
src/sdl2/mixer/: audio.hpp  channel.hpp  channelGroup.hpp  music.hpp  root.hpp  sound.hpp
src/sdl2/ttf/: font.hpp  root.hpp
tools/: preper_android.sh  preper_win.sh
